applications/portfolio/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio
  namespace: portfolio
spec:
  type: ClusterIP
  selector:
    app: portfolio
  ports:
    - name: web
      port: 8080
