applications/portfolio/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route
  namespace: portfolio
spec:
  parentRefs:
    - name: external
      namespace: gateway
  hostnames:
    - "www.erikak.no"
    - "erikak.no"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: portfolio
          port: 8080
